0027789: Visualization, TKOpenGl - improve compatibility with new OpenGL ES devices

OpenGl_ShaderManager::prepareStdProgramStereo() - fixed definition of global constants
in optimized Anaglyph shader.

OpenGl_Context now loads GL_KHR_debug extension within OpenGL ES context.